--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "https://www.notion.so/zackhargett/Use-ChatGPT-with-Siri-with-Dolo-ai-9cb1f906d59647c99e4a698b83d93138?pvs=4"
+      "destination": "https://sponsooor.framer.website/"
     }
   ]
 }
