--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "https://sponsooor.framer.website/"
+      "destination": "https://zackhargett.notion.site/Use-ChatGPT-with-Siri-with-Dolo-ai-9cb1f906d59647c99e4a698b83d93138"
     }
   ]
 }
